--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -289,7 +289,7 @@ nav img {
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
 
-input[type="submit"], .connexion button {
+input[type="submit"], .btn-type {
 	font-family: 'Syne';
 	font-weight: 700;
 	color: white;
@@ -450,4 +450,94 @@ box-shadow:
 	font-family: 'Work Sans';
 	margin-top: 15px;
 	font-weight: bold;
+}
+
+.modal {
+	display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+/* Style du contenu du modal */
+.modal-content {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+    background-color: white;
+    margin: 10% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 50%;
+    position: relative;
+}
+
+/* Style du bouton de fermeture */
+.close {
+	position: relative;
+	margin-left: auto;
+    color: black;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.edit-gallery{
+	border-bottom: 1px solid #B3B3B3;
+	width: 80%;
+	padding-bottom: 47px ;
+}
+
+.modal h2 {
+	font-size: 26px;
+	font-weight: normal;
+	font-family: 'Work Sans';
+	color: black;
+	margin-bottom: 46px;
+}
+
+
+.edit-gallery li{
+	display: inline-block;
+	width: 18% ;
+	margin: 0 4px ;
+}
+
+.edit-gallery img {
+	height: 103px;
+}
+
+.edit-gallery div {
+	position: relative;
+	bottom: 115px;
+	left: 55px;
+	background-color: black;
+	width: 17px;
+	height: 17px;
+	color: white;
+	font-size: 10px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border-radius: 2px;
+
+}
+
+.modal a {
+	color: #d65353;
+}
+
+#openModalBtn {
+	cursor: pointer;
 }
