--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -205,6 +205,7 @@ nav img {
 .page-active {
 	font-weight: bold;
 }
+
 /** */
 
 #introduction {
@@ -289,7 +290,8 @@ nav img {
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
 
-input[type="submit"], .btn-type {
+input[type="submit"],
+.btn-type {
 	font-family: 'Syne';
 	font-weight: 700;
 	color: white;
@@ -298,6 +300,8 @@ input[type="submit"], .btn-type {
 	width: 180px;
 	text-align: center;
 	border-radius: 60px;
+	height: 36px;
+	font-size: 16px;
 }
 
 footer nav ul {
@@ -308,7 +312,8 @@ footer nav ul {
 
 /***rajout css ***/
 
-html, body {
+html,
+body {
 	height: 100%;
 }
 
@@ -379,17 +384,14 @@ footer {
 	margin-top: 30px;
 }
 
-.connexion input {
-border: none;
-width: 379px;
-height: 51px;
-box-shadow:
-  0px 4px 14px rgba(0, 0, 0, 0.09)
-;
-}
-
-.connexion button {
-	padding: 10px 0;
+.connexion input,
+#titre,
+#categorie {
+	border: none;
+	width: 379px;
+	height: 51px;
+	box-shadow:
+		0px 4px 14px rgba(0, 0, 0, 0.09);
 }
 
 .connexion a {
@@ -398,9 +400,11 @@ box-shadow:
 }
 
 .error-message {
-    color: red;
-    font-size: 12px;
-    margin-top: 5px;
+	position: absolute;
+	color: red;
+	font-size: 12px;
+	margin-top: 5px;
+	height: 12px;
 }
 
 /*Mode Users*/
@@ -431,7 +435,7 @@ box-shadow:
 
 #portfolio h2 {
 	display: flex;
-	align-items:center ;
+	align-items: center;
 	justify-content: center;
 }
 
@@ -443,7 +447,7 @@ box-shadow:
 	font-family: 'Work Sans';
 }
 
-#introduction a  {
+#introduction a {
 	display: block;
 	margin: auto;
 	width: 80%;
@@ -454,49 +458,63 @@ box-shadow:
 
 .modal {
 	display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0, 0, 0, 0.5);
+	position: fixed;
+	z-index: 1;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+	background-color: rgba(0, 0, 0, 0.5);
 }
+
 /* Style du contenu du modal */
 .modal-content {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-    background-color: white;
-    margin: 10% auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 50%;
-    position: relative;
+	background-color: white;
+	margin: 10% auto;
+	padding: 20px;
+	border: 1px solid #888;
+	width: 50%;
+	position: relative;
+	border-radius: 10px;
 }
 
-/* Style du bouton de fermeture */
+/* Style du bouton de fermeture de modal */
 .close {
 	position: relative;
 	margin-left: auto;
-    color: black;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
+	color: black;
+	float: right;
+	font-size: 28px;
+	font-weight: bold;
+	cursor: pointer;
 }
 
-.close:hover,
-.close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
+/*styte boutton precedant modal*/
+
+.precedent {
+	display: none;
+	position: absolute;
+	left: 30px;
+	color: black;
+	font-size: 28px;
+	font-weight: bold;
 }
 
-.edit-gallery{
+.precedent:hover,
+.precedent:focus {
+
+	cursor: pointer;
+}
+
+/***/
+.pour-la-bar {
 	border-bottom: 1px solid #B3B3B3;
 	width: 80%;
-	padding-bottom: 47px ;
+	padding-bottom: 47px;
 }
 
 .modal h2 {
@@ -508,10 +526,10 @@ box-shadow:
 }
 
 
-.edit-gallery li{
+.edit-gallery li {
 	display: inline-block;
-	width: 18% ;
-	margin: 0 4px ;
+	width: 18%;
+	margin: 0 4px;
 }
 
 .edit-gallery img {
@@ -536,8 +554,107 @@ box-shadow:
 
 .modal a {
 	color: #d65353;
+	cursor: pointer;
 }
 
 #openModalBtn {
 	cursor: pointer;
+}
+
+#photoForm {
+
+	flex-direction: column;
+}
+
+#photoForm,
+#validerPhoto {
+	display: none;
+}
+
+.img-ajoutee {
+	height: 100%;
+	display: none;
+}
+
+.img-ajoutee img {
+	height: 100%;
+	object-fit: cover;
+}
+
+#photoForm label {
+	margin-top: 21px;
+	margin-bottom: 10px;
+	font-weight: bold;
+}
+
+#photoForm input,
+#photoForm select {
+	width: 100%;
+}
+
+.emplacement-image {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	height: 169px;
+	background-color: #e8f1f6;
+}
+
+#photoForm div i {
+	font-size: 46px;
+	color: #B9C5CC;
+}
+
+/* Styles pour l'élément label englobant */
+.custom-file-input {
+	display: flex;
+	align-items: center;
+	background-color: #CBD6DC;
+	color: #306685;
+	height: 36px;
+	padding: 5px 33px;
+	font-size: 16px;
+	border-radius: 50px;
+	margin-top: 10px;
+	cursor: pointer;
+}
+
+
+/* Cacher l'input de type file */
+.custom-file-input input[type="file"] {
+	display: none;
+}
+
+#ajoutPhoto,
+#validerPhoto {
+	width: 237px;
+}
+
+.photo-ajoute {
+	z-index: 1;
+	font-size: 24px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	position: fixed;
+	bottom: 10px;
+	left: -300px;
+	background-color: #1D6154;
+	color: white;
+	padding: 5px;
+	border-radius: 5px;
+	height: 37px;
+	width: 237px;
+	transition: left 0.5s ease-in-out;
+}
+
+.close-image {
+position: relative;
+bottom : 90%;
+right: 15%;
+font-size: 20px;
+color : grey;
+font-weight: bold;
+cursor: pointer;
 }
